# linking_foolery

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.org
backend/: CMakeLists.txt  Makefile  backend.cpp  backend.h
executable/: CMakeLists.txt  Makefile  executable  executable.cpp  executable.h
interface/: CMakeLists.txt  Makefile  interface.cpp  interface.h
